# voicechat-with-llm

./: LICENSE  README.md  main.py  pyproject.toml
audio/: device.py  play.py  stream.py  transcribe.py  vad.py
audio/transcribe/: base.py  local.py  remote.py
examples/: schema.json  system_prompt.txt
llm/: chat.py
utils/: log_duration.py
voice/: voicevox.py
